...

enum AppTab: String, CaseIterable {
    case datasets, search, results, filters, sites

    var title: String {
        switch self {
        case .datasets: "Datasets"
        case .search: "Search"
        case .results: "Results"
        case .filters: "Filters"
        case .sites: "Sites"
        }
    }

    var icon: String {
        switch self {
        case .datasets: "list.bullet.clipboard"
...
